# Fast-WoW-Combat-analyser

./: .gitignore  Cargo.toml  README.md  build.rs  release.ps1
.agent/workflows/: release.md
docs/: index.html
frontend/: index.html  index.html.bak  package-lock.json  package.json  spell_tooltips.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  utils.ts
frontend/src/components/: Footer.tsx  Header.tsx  SpellTooltip.tsx
frontend/src/hooks/: useSpellTooltips.tsx
frontend/src/pages/: EncounterList.tsx  LogList.tsx
frontend/src/pages/EncounterDetail/: EncounterDetail.tsx
src/: api.rs  gui.rs  lib.rs  main.rs  models.rs  parser.rs  spell_fetcher.rs
