[package]
name = "wowlogger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wowlogger"
path = "src/main.rs"

[[bin]]
name = "spell_fetcher"
path = "src/spell_fetcher.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nom = "7"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rfd = "0.15"
open = "5"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
winresource = "0.1"
